--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "@types/jsonpath": "^0.2.4",
     "@types/node": "^20.10.7",
     "bun": "^1.0.21",
-    "prettier": "^3.1.1"
+    "jsonpath": "^1.1.1",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3"
   }
 }
